# CramSchool

./: .gitignore  STATS_GUIDE.md  build_faiss.py  main.py  manage.py  pyproject.toml  requirements.txt
assessments/: admin.py  models.py
assessments/management/commands/: update_question_stats.py
assessments/migrations/: 0001_initial.py  0002_initial.py  0003_question_correct_count_question_correct_rate_and_more.py
chatbot/: Rag_model.py  START_FASTAPI.md  check_data_quality.py  fastapi_app.py  requirements_fastapi.txt
chatbot/draw_package/: drawing_engine.py  step_viewer.py
chatbot/rag_pipeline/: RAG_function.py  data_loader.py  keyword_match.py  post_process.py  semantic_chunk.py
chatbot/solve_generator/: difficuly_prompt_generation.py
core/: views.py
core/templates/core/: home.html
courses/: admin.py  forms.py  models.py  urls.py  views.py
courses/managements/commands/: import_questions.py
courses/migrations/: 0001_initial.py  0002_initial.py  0003_chapter_chapter_type_course_course_type.py  0004_course_is_default_placement.py
courses/templates/courses/: course_confirmdelete.html  course_detail.html  course_exam.html  course_exam_result.html  course_form.html  course_list_empty.html  course_list_no_placement_test.html  course_qa_chat.html  courses_list.html  placement_test.html  placement_test_already_done.html  placement_test_result.html  teacher_course_list.html
cramschool/: asgi.py  settings.py  urls.py  wsgi.py
enrollments/: admin.py  models.py  urls.py  views.py
enrollments/migrations/: 0001_initial.py  0002_initial.py  0003_enrollment_approved_at_enrollment_status_and_more.py  0004_alter_studentanswer_unique_together.py
templates/: base.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_level_user_placement_test_completed_at_and_more.py  0003_user_grade.py  0004_alter_user_level.py
(+9 files in other folders)
