[project]
name = "cram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asgiref==3.10.0",
    "django==5.2.8",
    "django-jazzmin==3.0.1",
    "dotenv==0.9.9",
    "faiss-cpu>=1.13.1",
    "fastapi>=0.124.0",
    "frontend>=0.0.3",
    "greenlet==3.2.4",
    "hf-xet>=1.2.0",
    "jieba>=0.42.1",
    "keybert>=0.9.0",
    "langchain==0.3.27",
    "langchain-community<0.4.0",
    "langchain-openai<1.0",
    "playwright==1.55.0",
    "psycopg2-binary==2.9.11",
    "pyee==13.0.0",
    "pymupdf>=1.26.6",
    "python-dotenv==1.2.1",
    "sqlparse==0.5.3",
    "tools>=1.0.15",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.57.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "uvicorn>=0.38.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
